results/SVCOMP/specgen/log-ExSymExe20-2024_03_04_19_13_47.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result == (z >= x);
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires z >= x;
  //@ ensures \result == (x < r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ ensures \result == (z >= x);
                          ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ ensures \result == (z >= x);
                               ^
  symbol:   variable x
  location: class Main
2 errors

class Main {
  static int field;
  static int field2;

  //@ requires z >= x;
  //@ ensures \result == (z >= x);
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires z >= x;
  //@ ensures \result == (x < r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires z >= x;
               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires z >= x;
                    ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ ensures \result == (z >= x);
                          ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ ensures \result == (z >= x);
                               ^
  symbol:   variable x
  location: class Main
4 errors

class Main {
  static int field;
  static int field2;

  //@ requires z >= x;
  //@ ensures \result == (z >= x);
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires z >= x;
  //@ ensures \result == (x < r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires z >= x;
               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires z >= x;
                    ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ ensures \result == (z >= x);
                          ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ ensures \result == (z >= x);
                               ^
  symbol:   variable x
  location: class Main
4 errors

class Main {
  static int field;
  static int field2;

  //@ requires field >= x;
  //@ ensures \result == (field >= x);
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires z >= x;
  //@ ensures \result == (x < r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires field >= x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires field >= x;
                        ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == (field >= x);
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ ensures \result == (field >= x);
                                   ^
  symbol:   variable x
  location: class Main
4 errors

class Main {
  static /*@ spec_public @*/ int field;
  static /*@ spec_public @*/ int field2;

  //@ requires Main.field >= x;
  //@ ensures \result == (Main.field >= x);
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires z >= x;
  //@ ensures \result == (x < r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: cannot find symbol
  //@ requires Main.field >= x;
                             ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: cannot find symbol
  //@ ensures \result == (Main.field >= x);
                                        ^
  symbol:   variable x
  location: class Main
2 errors

class Main {
  static /*@ spec_public @*/ int field;
  static /*@ spec_public @*/ int field2;

  //@ requires Main.field >= 0;
  //@ ensures \result == (Main.field >= 0);
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires z >= x;
  //@ ensures \result == (x < r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
